Fixed the footer alignment

--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,7 @@ div.fast img{
   padding-bottom: 100px;
 
 }
+
 .mobilecontent{
   
   display: inline-block;
@@ -273,10 +274,10 @@ label.logo{
   margin: 0  auto;
 }
 
-
 .footer-logo img{
   margin-left: 10px;
-  
+  position: absolute;
+  left: 10%;
 }
 
 .footer-logo label{
@@ -327,6 +328,7 @@ label.logo{
   display: flex;
   justify-content: space-evenly;
   flex-direction: row;
+  margin-bottom: 0px;
 }
 .fi{
   width: auto;
